Style for scrollbar, fix deleteNote

--- a/src/App.css
+++ b/src/App.css
@@ -27,19 +27,13 @@
 }
 .noteList::-webkit-scrollbar {
   background-color: aliceblue;
-  height: 899.3px;
   width: 20px;
   border-radius: 10px;
-  padding-right: 30px;
-  padding-left: 30px;
 }
 .noteList::-webkit-scrollbar-thumb {
-  width: 15px;
-  height: 15px;
+  border: 4px solid rgb(255, 255, 255);
   border-radius: 10px;
-  margin-right: 30px;
-  margin-left: 30px;
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(163, 153, 153);
 }
 .notes {
   border-bottom: 3px solid rgb(211, 204, 204);
